Fix boost icon, shift amazon choice column, enable adding products without keywords

--- a/src/containers/KeywordResearch/KeywordTracker/TrackerKeywordTable/ActionsIconCell/index.module.scss
+++ b/src/containers/KeywordResearch/KeywordTracker/TrackerKeywordTable/ActionsIconCell/index.module.scss
@@ -8,6 +8,6 @@
 
   button {
     background: none !important;
-    padding: none;
+    // padding: none;
   }
 }
